# dtos/user_dto.go
@@ -10,7 +10,3 @@ type LoginRequest struct {
 	Email string `json:"email" binding:"required,email"`
 	Password string `json:"password" binding:"required"`
 }
-
-type RefreshRequest struct {
-	RefreshToken string `json:"refresh_token" binding:"required"`
-}
